1. Метод .of [#336190]