@@ -30,7 +30,7 @@ public class DepDescCompTest {
     public void whenNaturalOrderSort() {
         List<String> result = Arrays.asList("K2","K2/SK1/SSK1","K2/SK1","K2/SK1/SSK2","K1"
                 ,"K1/SK2","K1/SK1","K1/SK1/SSK2","K1/SK1/SSK1");
-        List<String> expect = Arrays.asList("K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2"
+        List<String> expect = List.of("K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2"
                 ,"K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2");
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -40,7 +40,7 @@ public class DepDescCompTest {
     public void whenReverseSort() {
         List<String> result = Arrays.asList("K2","K2/SK1/SSK1","K2/SK1","K2/SK1/SSK2","K1"
                 ,"K1/SK2","K1/SK1","K1/SK1/SSK2","K1/SK1/SSK1");
-        List<String> expect = Arrays.asList("K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2"
+        List<String> expect = List.of("K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2"
                 ,"K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2");
         Departments.sortDesc(result);
         assertThat(result, is(expect));
