@@ -10,7 +10,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed1() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -19,7 +19,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -29,7 +29,7 @@ public class DepartmentsTest {
     public void whenMissed2() {
         List<String> input = Arrays.asList("K1/SK1","K1/SK2","K1/SK1/SSK1","K1/SK1/SSK2"
         ,"K2","K2/SK1/SSK1","K2/SK1/SSK2");
-        List<String> expect = Arrays.asList("K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2"
+        List<String> expect = List.of("K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2"
                 ,"K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
