@@ -18,8 +18,7 @@ public class NotifyAccountTes {
                 new Account("123", "Petr Arsentev", "000003"),
                 new Account("142", "Petr Arsentev", "000005")
         );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+        HashSet<Account> expect = new HashSet<>(List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
